# pfloss

./: pyproject.toml
src/pfloss/: __init__.py  colors.json  consts.py  converters.py  flossart.py  utils.py
tests/: __main__.py
